--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -3,6 +3,10 @@
 {% block title %}Hello HomeController!
 {% endblock %}
 
+{% block stylesheets %}
+<link rel="stylesheet" href="/css/home.css">
+{% endblock %}
+
 {% block body %}
 	<section id="conteneurPresentation" class="position-relative" style="height:100vh;">
 		<img src="/images/welcome.jpg" class="position-absolute w-100" style="z-index:-1;top:-60px;height:100vh; border-bottom:1px solid black;" />
