--- a/templates/figure/figure.html.twig
+++ b/templates/figure/figure.html.twig
@@ -42,7 +42,7 @@
 
 			<!-- Informations de l'article -->
 			<div class="col-sm-12 card-body text-center">
-				<h5 class="card-title">{{figure.name|upper}}</h5>
+				<h1 class="card-title h3">{{figure.name|upper}}</h5>
 				<p class="card-text">{{figure.description}}</p>
 			</div>
 
@@ -96,7 +96,7 @@
 		<!-- Affichage des commentaires -->
 		<div id="commentaires" class="col-sm-12 mx-auto my-4 py-2 justify-content-center border block" style="border-radius:5px;">
 			{% if comments %}
-				<p class="mb-5" style="text-decoration:#555 underline;">{{comments|length}}COMMENTAIRE{% if comments|length > 1 %}S{% endif %}</p>
+				<p class="mb-5" style="text-decoration:#555 underline;">{{comments|length}} COMMENTAIRE{% if comments|length > 1 %}S{% endif %}</p>
 				{% for comment in commentsPaginator %}
 				<div class="d-flex m-2">
 					<img src="../images/pictures/{{comment.user.picture}}" class="mx-4 mt-2 circle" style="height:50px; width:50px; border-radius:50px;"/>
