--- a/public/css/base.css
+++ b/public/css/base.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   min-height: 100vh;
   display: grid;
-  grid-template-rows: auto 1fr auto;
+  grid-template-rows: auto 1fr;
   font-family: Segoe UI, Helvetica, Arial, sans-serif;
 }
 
