add service upload user picture

--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -20,7 +20,7 @@
 
             {{ form_row(formSignUp.picture,{'attr':{'class':"form-control-file"}}) }}
 
-            <button type="submit" class="btn btn-dark"><i class="fas fa-user-plus"></i> Je m'inscris !</button>
+            <button type="submit" class="btn btn-dark my-2"><i class="fas fa-user-plus"></i> Je m'inscris !</button>
             
         {{ form_end(formSignUp) }}
     </div>
